<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">wShell</string>
    <string name="menu_start">Start</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_exit">Exit</string>
    <string name="address_text">...</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="about_text"><font size="32"><b>wShell</b></font>\n\nGPL v3\n\n[ <a href="https://github.com/meefik/wshell">github.com</a> ]\n\nThis program comes with ABSOLUTELY NO WARRANTY. This is free software, and you are welcome to redistribute it under certain conditions.\n\n&#169; 2014-2015 Anton Skshidlevsky</string>
    
    <string name="general_preferences">General</string>
    
    <string name="title_screenlock_preference">Lock screen</string>
    <string name="summary_screenlock_preference">Keep screen active while the application is running</string>
    
    <string name="title_port_preference">Port</string>
    <string name="dialog_title_port_preference">Port</string>
    
    <string name="title_localhost_preference">Localhost</string>
    <string name="summary_localhost_preference">Only listen on 127.0.0.1</string>
    
    <string name="title_root_preference">Root</string>
    <string name="summary_root_preference">Require superuser permissions</string>
    
    <string name="title_autostart_preference">Autostart</string>
    <string name="summary_autostart_preference">Run when the application opens</string>
    
    <string name="title_shell_preference">Shell</string>
    <string name="dialog_title_shell_preference">Shell</string>
    
    <string name="title_username_preference">Username</string>
    <string name="dialog_title_username_preference">Username</string>
    
    <string name="title_password_preference">Password</string>
    <string name="dialog_title_password_preference">Password</string>
    
    <!-- Default Values -->
    <string name="localhost">false</string>
    <string name="root">false</string>
    <string name="autostart">false</string>
    <string name="screenlock">true</string>
    <string name="port">4200</string>
    <string name="shell">/system/bin/sh</string>
    <string name="username">android</string>
    <string name="password">changeme</string>

</resources>
