<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_start"
        android:orderInCategory="100"
        android:showAsAction="always|withText"
        android:title="@string/menu_start">
    </item>
    <item
        android:id="@+id/menu_stop"
        android:orderInCategory="100"
        android:showAsAction="always|withText"
        android:title="@string/menu_stop">
    </item>
    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings">
    </item>
    <item
        android:id="@+id/menu_about"
        android:icon="@android:drawable/ic_menu_help"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_about">
    </item>
    <item
        android:id="@+id/menu_exit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_exit">
    </item>

</menu>
